--- a/AvanfittStore/Paginaprincipal.html
+++ b/AvanfittStore/Paginaprincipal.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="css/paginaprincipal.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
 <body>
 
     <div class="contenedor">
         <form>
             <div class="form-group">
-        <img src="Multimedia/h-removebg-preview.png" class="logo" alt="logo">
-        <button class="boton">Log In</button>
-        <p>¿aún no te has registrado?<a href="Sing-Up.html">Registrate aqui</a></p>
+                <img src="Multimedia/h-removebg-preview.png" class="logo" alt="logo">
+                <button class="boton">Log In</button>
+                <p>¿aún no te has registrado?<a href="Sing-Up.html">Registrate aquí</a></p>
             </div>
         </form>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-dasda
+
 </html>
